- Fixed Styling Issues - Fixed the styling issues in the PageSynopsis component to ensure proper alignment and spacing. & Spacing.

--- a/ReactLandingP/src/pages/PageSynopsis.css
+++ b/ReactLandingP/src/pages/PageSynopsis.css
@@ -183,7 +183,7 @@
 
 /* CardSkillSet */
 .cardskillset {
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     margin: auto;
     position: relative;
@@ -195,7 +195,7 @@
 .cardskill {
     position: absolute;
     width: 100%;
-    height: 65vh;
+    height: 80vh;
     border: #4b4b4b 1px solid;
     background: #111111;
     display: flex;
@@ -212,12 +212,12 @@
 
 .card-2 {
     left: 0px;
-    top: 100px;
+    top: 50px;
 }
 
 .card-3 {
     left: 0px;
-    top: 170px;
+    top: 100px;
 }
 
 
@@ -532,7 +532,7 @@
     .cardskill {
         position: absolute;
         width: 100%;
-        height: 55vh;
+        height: 65vh;
         border: #4b4b4b 1px solid;
         background: #111111;
         display: flex;
@@ -874,7 +874,7 @@
     .cardskill {
         position: absolute;
         width: 100%;
-        height: 50vh;
+        height: 65vh;
         border: #4b4b4b 1px solid;
         background: #111111;
         display: flex;
@@ -2242,6 +2242,7 @@
     .cardskillset {
         height: 80vh;
         width: 100%;
+        
         margin: auto;
         position: relative;
         display: flex;
@@ -2253,6 +2254,7 @@
         position: absolute;
         width: 100%;
         height: 80%;
+        padding: 1rem;
         border: #4b4b4b 1px solid;
         background: #111111;
         display: flex;
